--- a/style.css
+++ b/style.css
@@ -212,11 +212,12 @@ span {
   position: absolute;
   bottom: 30%;
   right: 1;
-  left: 55%;
+  left: 60%;
   width: 20%;
   pointer-events: none;
-  border: 4px solid var(--main-color);
+  border: 7px solid var(--main-color);
   border-radius: 50%;
+  object-fit: cover;
   opacity: 0;
   animation: slideLeft 1s ease forwards;
   animation-delay: 1.8s;
@@ -247,7 +248,8 @@ span {
 }
 
 .about-content {
-  margin-top: 20%;
+  margin-top: 5%;
+  margin-left: 150px;
 }
 
 .about-content h3 {
@@ -269,7 +271,10 @@ span {
 }
 .about-img img {
   border-radius: 50%;
-  border: 4px solid var(--main-color);
+  height: 130%;
+  width: 150%;
+  bottom: 150%;
+  border: 7px solid var(--main-color);
   border-radius: 50%;
 }
 /* EDUCATION SECTION */
@@ -452,6 +457,15 @@ span {
   transform: rotate(calc(var(--i) * 120deg)) translateY(-45px);
   animation: glow 0.04s linear forwards;
   animation-delay: calc(var(--i) * 0.05s);
+}
+
+.projects {
+  width: 100%;
+  height: 100vh;
+  padding: 60px 7% 0;
+}
+
+.projects-container {
 }
 
 /* KEYFRAMES */
