--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
   color: #fff;
   font-size: 24px;
 }
-/* HOME */
+/* SECTION HOME */
 .home {
   width: 100%;
   height: 100vh;
@@ -221,22 +221,14 @@ span {
   opacity: 0;
   animation: slideLeft 1s ease forwards;
   animation-delay: 1.8s;
+  transition: 0.2s ease;
 }
 
-/* KEYFRAM ANIMATIONS */
-@keyframes slideRight {
-  0% {
-    opacity: 0;
-    transform: translateX(-100%px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
+.home-img img:hover {
+  transform: scale(1.1);
 }
 
-/* ABOUT */
+/* SECTION ABOUT */
 .about {
   width: 100%;
   height: 100vh;
@@ -244,7 +236,6 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: rem;
 }
 
 .about-content {
@@ -276,6 +267,11 @@ span {
   bottom: 150%;
   border: 7px solid var(--main-color);
   border-radius: 50%;
+  transition: 0.2s ease;
+}
+
+.about-img img:hover {
+  transform: scale(1.1);
 }
 /* EDUCATION SECTION */
 .education {
@@ -327,7 +323,7 @@ span {
   color: var(--main-color);
 }
 
-/* SKILLS SECTION */
+/*SECTION SKILLS */
 .skills {
   width: 100%;
   height: 100vh;
@@ -459,16 +455,108 @@ span {
   animation-delay: calc(var(--i) * 0.05s);
 }
 
+/* SECTION PROJECTS */
 .projects {
   width: 100%;
   height: 100vh;
   padding: 60px 7% 0;
 }
 
-.projects-container {
+.projects .heading {
+  text-align: center;
+  justify-content: center;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
-/* KEYFRAMES */
+.projects .projects-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.projects .projects-container .projects-box {
+  position: relative;
+  display: flex;
+  width: 90%;
+  height: 90%;
+  border-radius: 2rem;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.projects-box img {
+  width: 100%;
+  transition: 0.5s ease;
+}
+
+.projects-box:hover img {
+  transform: scale(1.1);
+}
+
+.projects-box .projects-layer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), var(--main-color));
+  color: var(--primary-color);
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 4rem;
+  opacity: 0;
+  transition: 0.5s ease;
+}
+/* To return to the previous state */
+.projects-box:hover .projects-layer {
+  opacity: 1;
+}
+
+.projects-layer h4 {
+  font-size: 3rem;
+}
+
+.projects-layer p {
+  font-size: 1.6rem;
+  margin: 0.3rem 0 1rem;
+}
+
+.projects-layer a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
+  height: 5rem;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+}
+
+.projects-layer a i {
+  font-size: 2rem;
+  color: #333;
+}
+
+/* KEYFRAM ANIMATIONS */
+@keyframes slideRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 @keyframes slideLeft {
   0% {
     opacity: 0;
