--- a/style.css
+++ b/style.css
@@ -6,9 +6,12 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 :root {
+  --main-color: #754ef9;
   --primary-color: #fff;
   --secondary-color: #333;
-  --main-color: #754ef9;
+  --text-color: #333;
+  --bg-color: #fff;
+  --shadow-color: rgba(0, 0, 0, 0.2);
 }
 .dark-mode {
   --primary-color: #0b061f;
@@ -38,15 +41,19 @@ body {
   background: var(--main-color);
   box-shadow: 0 0.1rem 1rem var(--secondary-color);
 }
-.logo {
+.header .logo {
   font-size: 25px;
   color: var(--main-color);
   text-decoration: none;
   font-weight: 1000;
   cursor: default;
   margin-right: auto;
-  opacity: 0;
-  animation: slideRight 1s ease forwards;
+  opacity: 1;
+  /* animation: slideRight 1s ease forwards;
+  transition: 0.3s ease; */
+}
+.header .logo:hover {
+  transform: scale(1.1);
 }
 .navbar a {
   position: relative;
@@ -84,6 +91,12 @@ body {
 .toggle .toggle-icon {
   color: #fff;
   font-size: 24px;
+}
+
+#menu-icon {
+  font-size: 3.6rem;
+  color: var(--secondary-color);
+  display: none;
 }
 /* SECTION HOME */
 .home {
@@ -465,7 +478,7 @@ span {
 .projects .heading {
   text-align: center;
   justify-content: center;
-  margin-top: 1.5rem;
+  margin-top: 2.5rem;
   margin-bottom: 1.5rem;
 }
 
@@ -503,7 +516,7 @@ span {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.2), var(--main-color));
   color: var(--primary-color);
   justify-content: center;
@@ -542,6 +555,295 @@ span {
 .projects-layer a i {
   font-size: 2rem;
   color: #333;
+}
+
+/* SECTION PROJECTS */
+.contact {
+  width: 100%;
+  height: 100vh;
+  padding: 60px 7% 0;
+}
+.contact .heading {
+  margin-top: 40px;
+}
+
+.input-box {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  /* margin: 2rem; */
+}
+
+.contact form {
+  max-width: 70rem;
+  margin: 0.5rem auto;
+  text-align: center;
+  margin-bottom: rem;
+}
+
+.contact form .input-box {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.contact form .input-box input,
+.contact form textarea {
+  width: 100%;
+  padding: 1.5rem;
+  font-size: 1.6rem;
+  border-radius: 0.8rem;
+  border: 2px solid var(--main-color);
+  margin: 0.5rem 0;
+  box-shadow: 0 0.1rem 0.5rem var(--main-color);
+}
+
+.contact form .input-box input {
+  width: 49%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.contact form textarea {
+  resize: none;
+  height: 30vh;
+  width: 100%;
+}
+
+.contact form .btn {
+  margin-top: 2rem;
+  padding: 12px 28px;
+  background-color: var(--main-color);
+  border-radius: 50px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  border: 2px solid transparent;
+  color: #fff;
+  font-size: 16px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  font-weight: 700;
+  transition: 0.5s ease;
+  opacity: 0;
+  animation: slideTop 1s ease forwards;
+  animation-delay: 2s;
+  cursor: pointer;
+}
+.contact form .btn:hover {
+  background: transparent;
+  color: var(--main-color);
+  border-color: var(--main-color);
+}
+
+/* SECTION FOOTER */
+.footer {
+  width: 100%;
+  position: relative;
+  bottom: 0;
+  padding: 40px 0;
+  background: var(--main-color);
+}
+
+.footer .social {
+  text-align: center;
+  padding-bottom: 25px;
+  color: var(--primary-color);
+}
+
+.footer .social a {
+  font-size: 25px;
+  color: var(--primary-color);
+  border: 2px solid var(--primary-color);
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 10px;
+  transition: 0.3s ease;
+}
+
+.footer ul {
+  margin-top: 0;
+  padding: 0;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.footer .social a:hover {
+  transform: scale(1.2) translateY(-10px);
+  background-color: var(--primary-color);
+  color: var(--main-color);
+}
+
+.footer ul li a {
+  color: var(--primary-color);
+  border-bottom: 3px solid transparent;
+  text-decoration: none;
+  transition: 0.3s ease;
+}
+
+.footer ul li a:hover {
+  border-bottom: 3px solid var(--primary-color);
+}
+
+.footer ul li {
+  display: inline-block;
+  padding: 0 15px;
+}
+
+.footer .copyright {
+  margin-top: 50px;
+  text-align: center;
+  font-size: 16px;
+  color: var(--primary-color);
+}
+
+/* BRAKPOINTS */
+@media (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+  .home .professional-container {
+    height: 85.8rem;
+  }
+
+  .home .professional-container .overlay {
+    right: -9rem;
+  }
+}
+
+@media (max-width: 1024px) {
+  .header {
+    padding: 2rem 3%;
+  }
+
+  .home .professional-container .overlay {
+    right: -15rem;
+  }
+  .home .home-img img {
+    display: none;
+  }
+}
+
+@media (max-width: 991px) {
+  .navbar a:nth-child(1),
+  .navbar a:nth-child(2) {
+    color: var(--main-color);
+  }
+
+  .navbar a.active::before {
+    background: var(--main-color);
+    opacity: 0.7;
+  }
+
+  .home .home-content {
+    max-width: 50rem;
+  }
+
+  .home .profession-container .overlay {
+    right: -39rem;
+  }
+  .home-img img {
+    display: none;
+  }
+  .education,
+  .skills {
+    padding-bottom: 7rem;
+  }
+  .contact {
+    min-height: auto;
+  }
+  .footer {
+    padding: 2rem 3%;
+  }
+}
+
+@media (max-width: 768px) {
+  #menu-icon {
+    display: block;
+  }
+
+  #darkMode-icon {
+    position: absolute;
+    right: 7rem;
+    font-size: 2.6rem;
+    color: var(--secondary-color);
+    margin-bottom: 1rem;
+  }
+
+  .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem 3%;
+    background: var(--primary-color);
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    display: none;
+  }
+
+  .navbar.active {
+    display: block;
+  }
+
+  .navbar a {
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0;
+    color: var(--main-color);
+  }
+
+  .home {
+    padding: 0 3% 23rem;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .home-content h3 {
+    /* font-size: 2.6rem; */
+  }
+
+  .home-content h1 {
+    font-size: 5rem;
+  }
+
+  /* About section */
+  .about {
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+
+  .about-img img {
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+    bottom: 150%;
+    border: 7px solid var(--main-color);
+    border-radius: 50%;
+    transition: 0.2s ease;
+  }
+
+  .about-img img {
+    border-radius: 50%;
+    border: 7px solid var(--main-color);
+    border-radius: 50%;
+    transition: 0.2s ease;
+    margin-top: 40px;
+  }
+  .about-content {
+    margin-left: 10px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-content h2 {
+    text-align: center;
+  }
 }
 
 /* KEYFRAM ANIMATIONS */
